--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,9 +2,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.udacity.tourguide">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
+        android:hardwareAccelerated="false"
+        android:largeHeap="true"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name_long"
@@ -20,10 +22,16 @@
         </activity>
         <activity
             android:name=".MapViewActivity"
-            android:parentActivityName=".MainActivity">
-        </activity>
+            android:parentActivityName=".PagerActivity"
+            android:label="Map Navigation"/>
 
-        <meta-data android:name="com.google.android.geo.API_KEY" android:value="AIzaSyDbHiaES6bb8CDOzvcNTjQUjUnNVCCtKIM"/>
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="MY_API_KEY_HERE" />
+
+        <activity android:name=".PagerActivity"
+            android:label="Attractions in Mountain View"
+            android:parentActivityName=".MainActivity"/>
     </application>
 
 </manifest>
