--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,11 +5,11 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
-        android:hardwareAccelerated="false"
-        android:largeHeap="true"
         android:allowBackup="true"
+        android:hardwareAccelerated="false"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name_long"
+        android:largeHeap="true"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
@@ -22,16 +22,18 @@
         </activity>
         <activity
             android:name=".MapViewActivity"
-            android:parentActivityName=".PagerActivity"
-            android:label="Map Navigation"/>
+            android:label="Map Navigation"
+            android:parentActivityName=".PagerActivity" />
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="MY_API_KEY_HERE" />
 
-        <activity android:name=".PagerActivity"
+        <activity
+            android:name=".PagerActivity"
             android:label="Attractions in Mountain View"
-            android:parentActivityName=".MainActivity"/>
+            android:parentActivityName=".MainActivity" />
+        <activity android:name=".StartupDetailsActivity"></activity>
     </application>
 
 </manifest>
