Added missed unversioned files.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,7 +27,7 @@
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="API_KEY" />
+            android:value="AIzaSyDbHiaES6bb8CDOzvcNTjQUjUnNVCCtKIM" />
 
         <activity
             android:name=".PagerActivity"
