Layout improvements. Images added in 5 densities. StartupsFragment shows less data. Startup details implemented.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,12 +7,13 @@
     <application
         android:allowBackup="true"
         android:hardwareAccelerated="false"
-        android:icon="@drawable/udacity"
+        android:icon="@drawable/app_logo"
         android:label="@string/app_name_long"
         android:largeHeap="true"
-        android:roundIcon="@drawable/udacity"
+        android:roundIcon="@drawable/app_logo"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+
         <activity android:name=".SplashScreenActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="@string/app_name"
@@ -23,21 +24,27 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
         <activity
             android:name=".MapViewActivity"
             android:label="Map Navigation"
             android:parentActivityName=".PagerActivity" />
-
-        <meta-data
-            android:name="com.google.android.geo.API_KEY"
-            android:value="XXX" />
+            <meta-data
+                android:name="com.google.android.geo.API_KEY"
+                android:value="PUT_API_KEY_HERE" />
 
         <activity
             android:name=".PagerActivity"
             android:label="Attractions in Mountain View"
             android:parentActivityName=".MainActivity" />
-        <activity android:name=".StartupDetailsActivity" />
+
+        <activity
+            android:name=".StartupDetailsActivity"
+            android:label="Startup Details"
+            android:parentActivityName=".PagerActivity" />
+
         <activity android:name=".MainActivity"/>
+
     </application>
 
 </manifest>
